--- a/SneakerOutside2/Views/Product/Index.cshtml
+++ b/SneakerOutside2/Views/Product/Index.cshtml
@@ -11,106 +11,47 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne">
-                            Accordion Item #1
+                            Hãng giày
                         </button>
                     </h2>
                     <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
                         <div class="accordion-body">
                             <div class="list-group">
-                                <label class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="">
-                                    First checkbox
-                                </label>
-                                <label class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="">
-                                    Second checkbox
-                                </label>
-                                <label class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="">
-                                    Third checkbox
-                                </label>
-                                <label class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="">
-                                    Fourth checkbox
-                                </label>
-                                <label class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="">
-                                    Fifth checkbox
-                                </label>
+                                @foreach (var item in ViewBag.catalogs)
+                                {
+                                    <label class="list-group-item">
+                                        <input class="form-check-input" type="radio" name="catalogRadio" onclick="filterProduct(@item.CatalogID)">
+                                        @item.CatalogName
+                                    </label>
+                                }
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
+                @*<div class="accordion-item">
                     <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo">
-                            Accordion Item #2
+                            Mẫu giày
                         </button>
                     </h2>
                     <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse show">
                         <div class="accordion-body">
                             <div class="list-group">
-                                <label class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="">
-                                    First checkbox
-                                </label>
-                                <label class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="">
-                                    Second checkbox
-                                </label>
-                                <label class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="">
-                                    Third checkbox
-                                </label>
-                                <label class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="">
-                                    Fourth checkbox
-                                </label>
-                                <label class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="">
-                                    Fifth checkbox
-                                </label>
+                                @foreach (var item in ViewBag.subCatalogs)
+                                {
+                                    <label class="list-group-item">
+                                        <input class="form-check-input" type="radio" name="subCatalogRadio" onclick="filterProduct(@item.SubCatalogID)">
+                                        @item.SubCatalogName
+                                    </label>
+                                }
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree">
-                            Accordion Item #3
-                        </button>
-                    </h2>
-                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse show">
-                        <div class="accordion-body">
-                            <div class="list-group">
-                                <label class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="">
-                                    First checkbox
-                                </label>
-                                <label class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="">
-                                    Second checkbox
-                                </label>
-                                <label class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="">
-                                    Third checkbox
-                                </label>
-                                <label class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="">
-                                    Fourth checkbox
-                                </label>
-                                <label class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="">
-                                    Fifth checkbox
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                </div>*@
             </div>
         </div>
         <div class="col-10">
-            <div class="row row-cols-4 g-4">
+            <div class="row row-cols-4 g-4" id="productList">
                 @foreach (var item in Model)
                 {
                     <div class="col">
@@ -128,5 +69,33 @@
             </div>
         </div>
     </div>
-   
 </div>
+
+@section Scripts{
+    <script type="text/javascript">
+        function filterProduct(CatalogID) {
+            $("#productList").html("");
+            $.ajax({
+                type: "POST",
+                url: "@Url.Action("FilterProduct", "Product")",
+                data: {
+                    CatalogID: CatalogID
+                },
+                success: function (res) {
+                    var product_data = '';
+                    $.each(res, function (key, value) {
+                        product_data += '<div class="col"><div class="card h-100 text-center">';
+                        product_data += '<a href="/Product/ProductDetail/' + value.productID + '">';
+                        product_data += '<img src="https://localhost:44344/Images/' + value.image + '" class="card-img-top">';
+                        product_data += '<div class="card-body">';
+                        product_data += '<h5 class="card-title">' + value.productName + '</h5>';
+                        product_data += '<p class="card-text">' + value.minPrice + ' VNĐ</p>';
+                        product_data += '</div></a></div></div>';
+
+                    });
+                    $('#productList').append(product_data);
+                }
+            });
+        }
+    </script>
+}
