--- a/SneakerOutside2/Views/User/Index.cshtml
+++ b/SneakerOutside2/Views/User/Index.cshtml
@@ -10,11 +10,11 @@
             <div class="accordion" id="accordionPanelsStayOpenExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne">
                             Thông tin cá nhân
                         </button>
                     </h2>
-                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse">
                         <div class="accordion-body">
                             <form id="changeInfoForm" asp-action="ChangeInfo" autocomplete="off">
                                 <div class="mb-3">
@@ -47,11 +47,11 @@
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo">
                             Thay đổi mật khẩu
                         </button>
                     </h2>
-                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse show">
+                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
                         <div class="accordion-body">
                             <form id="changePassForm" asp-action="ChangePassword" autocomplete="off">
                                 <div class="mb-3">
@@ -296,7 +296,7 @@
                                         type: 'success'
                                     });
                                     setTimeout(function () {
-                                        dataTable.ajax.reload();
+                                        window.location.replace("Home/Index");
                                     }, 1000);
                                 }
                                 else {
