--- a/SneakerInside/Views/Product/Index.cshtml
+++ b/SneakerInside/Views/Product/Index.cshtml
@@ -19,6 +19,9 @@
                         </button>
                     </th>
                     <th>
+                        @Html.DisplayNameFor(model => model.Image)
+                    </th>
+                    <th>
                         @Html.DisplayNameFor(model => model.ProductName)
                     </th>
                     <th>
@@ -59,6 +62,13 @@
                         },
                         orderable: false,
                         width: '100px'
+                    },
+                    {
+                        data: 'image',
+                        render: function (data) {
+                            return '<img src="/Images/' + data + '" asp-append-version="true" width="300" />';
+                        },
+                        orderable: false,
                     },
                     {
                         data: 'productName'
