--- a/SneakerInside/Views/Shared/_Layout.cshtml
+++ b/SneakerInside/Views/Shared/_Layout.cshtml
@@ -151,6 +151,12 @@
                                         <p>Danh sách đơn hàng</p>
                                     </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a asp-action="Revenue" asp-controller="Report" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Danh sách doanh thu</p>
+                                    </a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
